# Sonification-PlayBoard

./: .gitignore  LICENSE  README.md  plan.md
bridge/: README.md  pyproject.toml
bridge/config/: mapping.example.yaml
bridge/sonification_bridge/: cli.py  osc_sender.py  protocol.py  sources.py
bridge/tests/: test_mapping.py  test_protocol.py
docs/: PROTOCOL.md  TODO-dynamic-mapping.md
legacy/: README.md
legacy/bridge/sonification_bridge/: __init__.py  bridge.py  mapping.py
legacy/sonicpi/: peter_gunn_closish.rb
microbit/: README.md  bridge.ts  hub_sink.ts  source_1_light_accel.ts  source_2_pot_flex.ts
sonicpi/: peter_gunn_closer.rb  peter_gunn_from_mxl.rb  peter_gunn_from_mxl_single_buffer.rb
webapp/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webapp/docs/: NODE_MODULE_EXAMPLES.md
webapp/docs/sample-data/: README.md  hockey-stick-co2-temp-dense.csv  hockey-stick-co2-temp.csv  real-noaa-nasa-co2-temp.csv
webapp/src/: App.svelte  app.css
webapp/src/lib/audio/: audioState.svelte.ts  engine.ts
webapp/src/lib/components/: Canvas.svelte  ComponentWell.svelte  LiveSourcesTab.svelte  SourcesPanel.svelte  Sparkline.svelte  Toolbar.svelte  ValueReadout.svelte
webapp/src/lib/graph/: graph.svelte.ts  nodeSpec.ts  persistence.ts  runtime.ts  specs.ts  tick.ts
webapp/src/lib/nodes/: core.ts  registry.ts
webapp/src/lib/serial/: gateway.svelte.ts  protocol.ts
webapp/src/lib/sources/: csvParser.ts  datasets.svelte.ts  playback.svelte.ts
webapp/src/lib/util/: ring.ts
(+28 files in other folders)
