[project]
name = "sonification-bridge"
version = "0.1.0"
description = "Bridge sensor data (fake or serial) to OSC for Sonic Pi."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-osc>=1.8",
    "pyyaml>=6.0",
    "pyserial>=3.5",
]

[project.scripts]
sonification-bridge = "sonification_bridge.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sonification_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
